--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -75,12 +75,15 @@
             <span *ngIf="batchMode && selectedProjects.length == 0" class="title">Stop batch status</span>
             <span *ngIf="batchMode && selectedProjects.length > 0" class="title">Pas projecten aan</span>        
     </div>
+    <div class="search">
+        <input type="text" name="search" (input)="projectService.setSearchTerm($event.target.value)" placeholder="Zoeken">
     </div>
+</div>
 
 <div class="projectList" [ngClass]="{'batchMode': batchMode}">
     <div class="projects">
         <div class="project" 
-        *ngFor="let project of (projectService.projects | filterProjects: projectService.activeFilter | sortProjects: projectService.sortOptions); trackBy: trackByFn"
+        *ngFor="let project of (projectService.projects | sortProjects: projectService.sortOptions | filterProjects: projectService.activeFilter : projectService.searchTerm | async); trackBy: trackByFn"
         [ngClass]="[project.status]"
         [class.isFuturePlanned]="isFuturePlanned(project)"
         [class.selected]="isSelected(project) && batchMode"
