--- a/src/app/components/mail-project/mail-project.component.html
+++ b/src/app/components/mail-project/mail-project.component.html
@@ -8,9 +8,9 @@
 
 <form *ngIf="auth.isAdmin()" [formGroup]="mailForm" class="wrapper" (ngSubmit)="onSubmit()">
   <div class="inputGroup">
-    <label for="to">Naar e-mailadres</label>
-    <input type="email" name="to" formControlName="to">
-    <p *ngIf="formService.checkInputField(mailForm, 'to', submitted)" class="error">!</p>
+    <label for="reciever">Naar e-mailadres</label>
+    <input type="email" name="reciever" formControlName="reciever">
+    <p *ngIf="formService.checkInputField(mailForm, 'reciever', submitted)" class="error">!</p>
   </div>
 
   <div class="inputGroup">
@@ -30,18 +30,36 @@
     <textarea name="body" id="body" formControlName="body" rows="3"></textarea>
     <p *ngIf="formService.checkInputField(mailForm, 'body', submitted)" class="error">!</p>
   </div>
-
   <div class="inputGroup right">
     <input type="submit" value="Mail verzenden">
   </div>
 </form>
-<div class="wrapper mailList noBorder" *ngIf="project">
-  <div class="mail" *ngFor="let mail of project.mails | reverse">
+
+<div class="wrapper mailPreview noBorder">
+  <h2>Mailvoorbeeld</h2>
+    <div class="mail">
+      <div class="header">
+        <div class="sender"><strong>Van:</strong> {{ auth.getUserDetails().id | user | async }}</div>
+        <div class="receiver"><strong>Aan:</strong> {{mailForm.get('reciever').value}}</div>
+        <div class="cc" *ngIf="mailForm.get('cc').value"><strong>Cc:</strong> {{mailForm.get('cc').value}}</div>
+        <div class="subject" *ngIf="mailForm.get('subject').value"><strong>Onderwerp:</strong> <span
+            [innerHTML]="mailForm.get('subject').value | mailTemplate | async | safeHtml"></span></div>
+      </div>
+      <div class="body" [innerHTML]="mailForm.get('body').value | newlineToBr | mailTemplate | async | safeHtml"></div>
+    </div>
+</div>
+
+<hr>
+
+<div class="wrapper mailList noBorder" *ngIf="singleProjectService.projectData">
+  <h2>Verzonden mails</h2>
+  <div class="mail" *ngFor="let mail of singleProjectService.projectData.mails | reverse">
     <div class="header">
       <div class="sender"><strong>Van:</strong> {{ mail.sender | user | async }}</div>
       <div class="receiver"><strong>Aan:</strong> {{mail.receiver}}</div>
       <div class="cc" *ngIf="mail.cc"><strong>Cc:</strong> {{mail.cc}}</div>
       <div class="dateSent"><strong>Datum:</strong> {{ mail.dateSent | formatDate: 'time'}}</div>
+      <div class="subject" *ngIf="mail.subject"><strong>Onderwerp:</strong> {{mail.subject}}</div>
     </div>
     <div class="body" [innerHTML]="mail.body | safeHtml"></div>
   </div>
