--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -29,6 +29,11 @@ h2 {
     font-weight: 800;
 }
 
+hr {
+    border: none;
+    border-top: 1px solid #ededed;
+}
+
 .wrapper {
     width: 95%;
     max-width: 960px;
