--- a/src/app/components/mail-project/mail-project.component.scss
+++ b/src/app/components/mail-project/mail-project.component.scss
@@ -16,18 +16,27 @@ form, .goBackRow .wrapper {
     border-bottom: 1px solid #ededed;
 }
 
-.inputGroup.textarea {
-    display: block;
-    margin-top: 20px;
+.inputGroup{
+    &.textarea {
+        display: block;
+        margin-top: 20px;
 
-    label {
-        text-align: left;
+        label {
+            text-align: left;
+        }
+        
+        textarea {
+            width: 100%;
+            height: 300px;
+        }
     }
-    
-    textarea {
-        width: 100%;
+
+    &.submit {
+        display: flex;
+        gap: 10px;
     }
 }
+
 
 .mailList, .mailPreview {
     padding-top: 0;
