--- a/src/app/components/mail-project/mail-project.component.scss
+++ b/src/app/components/mail-project/mail-project.component.scss
@@ -29,6 +29,11 @@ form, .goBackRow .wrapper {
             width: 100%;
             height: 300px;
         }
+
+        .flex {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
     &.submit {
