Update content prices

--- a/src/app/components/prices/prices.component.html
+++ b/src/app/components/prices/prices.component.html
@@ -157,7 +157,7 @@
   <p>
     Eén forfait wordt aangerekend per adres of reeks van testen in zelfde project/fase. De wooneenheden moeten wel samen
     aangeboden worden.<br>
-    Conformiteitsverklaringen worden één op één doorgerekend, aan de voordeligste prijs (meetal AICB).
+    Conformiteitsverklaringen worden één op één doorgerekend, aan de voordeligste prijs (meetal AICB).<br>
   </p>
   <h2>Werfbezoeken</h2>
   <p>
@@ -165,4 +165,6 @@
     aangerekend.
     Voor de provincies West-Vlaanderen en Luxemburg wordt deze forfaitaire vergoeding met 50 euro (ex BTW) verhoogd.
   </p>
+  <h2>Extra's</h2>
+  <p>Op vraag van de klant wordt voor weekend- en avondwerk (starten na 17 uur) een extra vergoeding van 150 euro aangerekend.</p>
 </div>
