Add admin page for mail templates

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,6 +6,7 @@
     <div class="submenu">
       <a routerLink="/admin/gebruikers" routerLinkActive="active">Gebruikers</a>
       <a routerLink="/admin/bedrijven" routerLinkActive="active">Bedrijven</a>
+      <a routerLink="/admin/mail-templates" routerLinkActive="active">Mail templates</a>
     </div>
   </a>
   <a routerLink="/inloggen" *ngIf="!auth.loggedIn()" routerLinkActive="active">Inloggen</a>
