--- a/src/assets/sass/_admin.scss
+++ b/src/assets/sass/_admin.scss
@@ -12,6 +12,11 @@
         grid-template-columns: 1fr 1fr 1fr 20px 20px;
         grid-gap: 15px;
         padding: 0 15px;
+        div {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
 
         .icon {
             cursor: pointer;
@@ -20,6 +25,10 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+
+        .span2 {
+            grid-column: span 2;
         }
     }
 }
