--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -135,6 +135,10 @@ textarea {
         line-height: $size;
         font-size: $size / 2;
     }
+
+    &.submit {
+        gap: 10px;
+    }
 }
 
 .right {
