Changes needed after lib upgrades

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,4 @@
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="true" [zoomControl]="true">
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
 
   <agm-marker *ngFor="let m of markers"
     [latitude]="m.lat"
