--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -128,7 +128,9 @@
                 <ng-container *ngIf="project.extraInfoAddress">, </ng-container>
                 <span *ngIf="project.extraInfoAddress" class="extraInfoAddress" [innerHTML]="project.extraInfoAddress | highlightText: projectService.searchTerm | safeHtml"></span>
             </div>
-            <div class="dateHourCreated" title="Laatst aangepast: {{ project.dateEdited | formatDate:'time' }}"><span [innerHTML]="project.dateActive | formatDate:'empty' | highlightText: projectService.searchTerm | safeHtml"></span></div>
+            <div class="dateHourCreated" title="Laatst aangepast: {{ project.dateEdited | formatDate:'time' }}">
+                <span [innerHTML]="project.dateActive | formatDate:'empty' | highlightText: projectService.searchTerm | safeHtml"></span>
+            </div>
             <div class="dateHourPlanned">
                 <b>
                     <span [innerHTML]="project.executor | executor | highlightText: projectService.searchTerm | safeHtml"></span>
