--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,3 +2,6 @@ $infiltro-grey: #777;
 $infiltro-border-grey: #ededed;
 $infiltro-red: #ED1F24;
 $infiltro-green: #2FB770;
+$input-padding: 3px;
+$input-lineheight: 18px;
+$input-fontsize: 13px;
