--- a/src/app/components/single-project-comments/single-project-comments.component.scss
+++ b/src/app/components/single-project-comments/single-project-comments.component.scss
@@ -7,5 +7,10 @@ form {
     .inputGroup {
         padding-right: 0;
         padding-left: 0;
+        grid-template-columns: 1fr;
+    }
+
+    .submit {
+        margin-bottom: 15px;
     }
 }
