--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -5,3 +5,7 @@ $infiltro-green: #2FB770;
 $input-padding: 3px;
 $input-lineheight: 18px;
 $input-fontsize: 13px;
+
+:root {
+    --label-width: 25%;
+}
