--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -10,14 +10,11 @@ button,
     font-size: $input-fontsize;
     color: $infiltro-grey;
     line-height: $input-lineheight;
-    border: none;
     border: 1px solid lighten($infiltro-grey, 30%);
-
-    // border-bottom: 1px solid $infiltro-grey;
     background: inherit;
     text-align: left;
     padding: $input-padding;
-    flex-grow: 1;
+    width: 100%;
 }
 
 input,
@@ -37,7 +34,6 @@ input[type='submit'] {
 }
 
 textarea {
-    // border: 1px solid $infiltro-grey;
     text-align: left;
 }
 
@@ -60,18 +56,21 @@ textarea {
         margin: 0;
     }
 
-    &.split {
+    &.twoColumns {
         display: grid;
-        grid-template-columns: 55% 1fr;
+        grid-template-columns: 1fr 1fr;
+        align-items: baseline;
+        --label-width: 50%;
+
+        .right {
+            --label-width: 30%;
+        }
+
 
         .left,
         .right {
             display: flex;
             flex-direction: column;
-
-            label {
-                width: calc(var(--label-width) * 2);
-            }
         }
     }
 }
@@ -79,47 +78,20 @@ textarea {
 .projectRow,
 .inputGroup {
     padding: 2px 15px;
-    display: flex;
+    display: grid;
+    grid-template-columns: var(--label-width) 1fr;
     justify-content: flex-start;
     position: relative;
-
-    &.space-between {
-        justify-content: space-between;
-
-        label {
-            width: inherit;
-        }
-    }
-
-    &.right {
-        justify-content: flex-end;
-
-        label {
-            width: inherit;
-        }
-
-        .inputField {
-            flex-grow: 0;
-        }
-    }
-
-    .left,
-    .right {
-        display: flex;
-    }
+    grid-gap: 15px;
 
     label {
-        --label-width: 30%;
         display: block;
         font-weight: 700;
         font-family: 'Open Sans Condensed', sans-serif;
-        width: var(--label-width);
-        min-width: 120px;
         text-align: right;
         font-size: $input-fontsize;
         line-height: $input-lineheight;
         padding: $input-padding;
-        padding-right: 30px;
         white-space: nowrap;
     }
 
@@ -128,10 +100,6 @@ textarea {
         min-width: 30px;
         min-height: 31px;
         cursor: pointer;
-    }
-
-    .inputField {
-        flex-grow: 1;
     }
 
     p.error {
@@ -170,11 +138,32 @@ textarea {
     }
 }
 
+.topControls {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2px 15px;
+
+    .left {
+        display: flex;
+    }
+}
+
 @media screen and (max-width: 700px) {
     .projectRow,
     .inputGroup {
         label {
             white-space: normal;
+        }
+    }
+
+    .projectSection {
+        &.twoColumns {
+            --label-width: 25%;
+            grid-template-columns: 1fr;
+
+            .right {
+                --label-width: 25%;
+            }
         }
     }
 }
